update, delete e paginacao

--- a/almox/templates/almox/base.html
+++ b/almox/templates/almox/base.html
@@ -6,7 +6,7 @@
 
 <head>
     <title>{% block title %}{% endblock %}</title>
-    <link href="{% static 'css/blog.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 
 <body>
