--- a/almox/templates/almox/comp.html
+++ b/almox/templates/almox/comp.html
@@ -14,4 +14,7 @@
         <p>Estado: {{comp.comp_estado}}</p>
         <p>Observações: {{comp.comp_addobs}}</p>
     </div>
+    <div>
+        <a href="delete/{{comp.id}}"><span><button>Deletar</button></span></a>
+    </div>
 {% endblock %}
